# etudes

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  etudesConfig.cmake.in
config/: host.yml
config/scenes/: algosynth.yml  blobtraces.yml  clouds.yml  domainwarp.yml  grid.yml  multifractal.yml  parallels.yml  particles.yml  shader.yml  simplexfield.yml  sinusoids.yml  space.yml  spiral.yml  truchet.yml
configuration/: etudes.yml  host.yml
configuration/etudes/: algosynth.yml  aura.yml  blobtraces.yml  ca.yml  grid.yml  line.yml  parallels.yml  particles.yml  sinusoids.yml  space.yml  testbed.yml
configuration/scenes/: ca.yml  flowtrace.yml  grid.yml  parallels.yml  particles.yml  sinusoids.yml  space.yml  spiral.yml  testbed.yml  truchet.yml
doc/: ideas.md  ideas.txt  workflow.md
doc/diagrams/: workflow.dia
osc/: Definitions.scd  Midi.scd  OSC_sender.scd  SC_Control.scd  Server.scd  SynthDefs.scd  easy_sc.scd  env_follower.scd
osc/flavi0/: line-experiments.scd
resources/shader/: ident-uv.vert  ident.vert  textured_array.frag  white.frag
resources/shaders/: algosynth.frag  carpet.fsh  carpet_00.fsh  carpet_01.fsh  carpet_02.fsh  carpet_03.fsh  carpet_04.fsh  heureka.fsh  ident-uv.vsh  ident.vsh  mvp-uv.vert  mvp-uv.vsh  planar.vsh  raymarch.fsh  sinusoid.frag  solid-color.fsh  spiral.frag  standingwaves.fsh  textured-hueshift.frag  textured.frag  textured.fsh  white.frag  xorflash.fsh
resources/shaders/elements/: clouds.fsh  domainwarp.frag  domainwarp.fsh  multifractal.frag  multifractal.fsh  sinusoid.frag  sinusoid.fsh  spiral.fsh  truchet.frag  truchet.fsh  waves.fsh
resources/shaders/flowtrace/: flowtrace.fsh  identity.vsh
sc-code/: Definitions.scd  Midi.scd  SC_Control.scd  Server.scd  TestFile.scd  UtilityFunctions.scd
sc-code/claudio/: SC_Control.scd  hoaDefinitions.scd  temp.scd
scripts/: cppcheck
src/: CMakeLists.txt  main.cpp  ofApp.cpp
src/host/: EtudesHost.cpp  EtudesHost.hpp  OSCInput.cpp  OSCInput.hpp  OSCInputRouter.cpp  OSCInputRouter.hpp  Renderer.cpp  Renderer.hpp  main.cpp
src/host/IO/: OSCInput.cpp  VideoOutput.cpp  VideoOutput.hpp  VideoOutputV4L2.cpp  VideoOutputV4L2.hpp
src/lib/: EtudesConfig.hpp  Renderer.hpp  ShaderRegistry.cpp  ShaderRegistry.hpp
src/lib/Drawing/: DrawPrimitives.cpp  DrawPrimitives.hpp  Logging.cpp  Logging.hpp  ModulationFuncs.hpp  TextureTiled.cpp  TextureTiled.hpp  Utilities.hpp
src/lib/Elements/: AlgoSynth.cpp  AlgoSynth.hpp  BlobTraces.cpp  BlobTraces.hpp  CellularAutomaton.cpp  CellularAutomaton.hpp  Clouds.cpp  Clouds.hpp  DomainWarp.cpp  DomainWarp.hpp  Element.hpp  ElementLine.cpp  ElementLine.hpp  FlowTrace.cpp  FlowTrace.hpp  ImageView.cpp  ImageView.hpp  Lines.cpp  Lines.hpp  MultiFractal.cpp  MultiFractal.hpp  PartialAura.cpp  PartialAura.hpp  Particles.cpp  Particles.hpp  Shader.cpp  Shader.hpp  SimplexField.cpp  SimplexField.hpp  Sinusoids.cpp  Sinusoids.hpp  Spiral.cpp  Spiral.hpp  Testbed.cpp  Testbed.hpp  Truchet.cpp  Truchet.hpp
src/lib/Elements/flowtrace/: output.fsh
src/lib/Elements/shader/: bak.fsh  red.fsh  shader.fsh
src/lib/Etudes/: Etude.cpp  Etude.hpp  EtudeLines.cpp  EtudeLines.hpp  EtudeTemplate.cpp  EtudeTemplate.hpp  EtudeTriangles.cpp  EtudeTriangles.hpp
src/lib/Factories/: ElementFactory.cpp  ElementFactory.hpp  EtudeFactory.cpp  EtudeFactory.hpp  SceneFactory.cpp  SceneFactory.hpp
src/lib/Graphics/: Context.cpp  Context.hpp  Image.cpp  Image.hpp  LookupTable.cpp  LookupTable.hpp  Painter.cpp  Painter.hpp  PanZoom.cpp  PanZoom.hpp  PanZoomParallel.cpp  PanZoomParallel.hpp  Quad.cpp  Quad.hpp  ShaderRegistry.cpp  ShaderRegistry.hpp  SimplexNoise.cpp  SimplexNoise.hpp  Texture.cpp  Texture.hpp  TextureTiled.cpp  TextureTiled.hpp
src/lib/Graphics/Drawable/: Quad.cpp  Quad.hpp
src/lib/Graphics/Geometry/: Rect.cpp  Rect.hpp  Transforms.cpp  Transforms.hpp
src/lib/IO/: ImageLoader.cpp  ImageLoader.hpp  OSCInput.cpp  OSCInput.hpp  VideoOutput.cpp  VideoOutput.hpp  VideoOutputSpout.cpp  VideoOutputSpout.hpp  VideoOutputSyphon.h  VideoOutputSyphon.hpp  VideoOutputSyphon.mm  VideoOutputV4L2.cpp  VideoOutputV4L2.hpp
src/lib/Input/: Input.cpp  Input.hpp  OSCInput.cpp  OSCInput.hpp
src/lib/Receiver/: Element.hpp  Etude.cpp  Etude.hpp  Receiver.cpp  Receiver.hpp  ReceiverRegistry.cpp  ReceiverRegistry.hpp
src/lib/Receivers/: Element.cpp  Element.hpp  Etude.cpp  Etude.hpp  Receiver.cpp  Receiver.hpp  Scene.cpp  Scene.hpp
src/lib/Render/: ModulationFuncs.cpp  ModulationFuncs.hpp  Render.hpp  RenderLine.cpp  RenderLine.hpp  RenderPrimitives.cpp  RenderPrimitives.hpp  RenderTemplate.cpp  RenderTemplate.hpp  RenderTriangle.cpp  RenderTriangle.hpp
src/lib/Renderers/: LineRenderer.cpp  LineRenderer.hpp  Template.cpp  Template.hpp
src/lib/Rendering/: Painter.cpp  Painter.hpp  Texture.hpp  TextureTiled.cpp  TextureTiled.hpp
src/lib/Shader/: ShaderRegistry.cpp  ShaderRegistry.hpp
src/lib/Source/: OSCSource.cpp  OSCSource.hpp  Source.cpp  Source.hpp
src/lib/Util/: Configuration.cpp  Configuration.hpp  Logging.cpp  Logging.hpp  Utilities.cpp  Utilities.hpp
src/lib/Utility/: AccumulativeProfiler.cpp  AccumulativeProfiler.hpp  Array2D.hpp  Config.cpp  Config.hpp  Configuration.cpp  Configuration.hpp  ImageLoader.cpp  ImageLoader.hpp  Logging.cpp  Logging.hpp  ModulationFuncs.cpp  ModulationFuncs.hpp  ScopedProfiler.cpp  ScopedProfiler.hpp  ShaderRegistry.cpp  ShaderRegistry.hpp  Utility.cpp  Utility.hpp
src/sound-host/: SoundEtude.cpp  SoundEtude.hpp  main.cpp
travis/scripts/: install_glbinding  install_glfw3  install_glm  install_liblo  install_yaml_cpp
